snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/maven-metadata.xml.sha256
b2d09149a7d6a7f31fc0417e8b553dcb6b44ba8f0f246604f4d19270d0e4d788